fixed inside borders and spacing, adds arrow to sorted point column

--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,34 @@ body {
 }
 
 .camper {
-  /* height: 50px; */
   border-bottom: 2px solid lightgray;
   border-left: 2px solid lightgray;
   border-right: 2px solid lightgray;
-  padding: 5px;
   display: grid;
   grid-template-columns: 0fr 1fr 6fr 4fr 4fr;
-  grid-template-rows: 50px;
+  grid-template-rows: min-content;
 }
 
 .camper-inner {
-  height: 55px;
+  height: 50px;
   border-right: 2px solid lightgray;
+}
+
+.camper-inner-inner {
+  padding-top: 5px;
+}
+
+.camper-name {
+  margin-left: 10px;
+}
+
+.header-name {
+  padding-top: 15px;
+  margin-left: 10px;
+}
+
+.camper-alltime, .camper-recent, .camper-index {
+  padding-top: 15px;
 }
 
 .camper-img {
